scripts/nullness/wpi/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8.txt
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:115: error: (dereference.of.nullable) $$ 1 $$ Main.skandium $$ ( 5391, 5404 ) $$ dereference of possibly-null reference Main.skandium
		Stream<SchemaInterface, HashList> stream = Main.skandium.newStream(skeleton);
		                                               ^
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:131: error: (dereference.of.nullable) $$ 1 $$ Main.skandium $$ ( 6013, 6026 ) $$ dereference of possibly-null reference Main.skandium
		Stream<HashList, HashList> stream = Main.skandium.newStream(skeleton);
		                                        ^
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:147: error: (dereference.of.nullable) $$ 1 $$ Main.skandium $$ ( 6591, 6604 ) $$ dereference of possibly-null reference Main.skandium
		Stream<HashList, Object> stream = Main.skandium.newStream(skeleton);
		                                      ^
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:214: error: (dereference.of.nullable) $$ 1 $$ Main.hashmap.get(Main.byteToString(result.get(0).getHash())) $$ ( 9717, 9777 ) $$ dereference of possibly-null reference Main.hashmap.get(Main.byteToString(result.get(0).getHash()))
			System.out.println(s2.getSentence(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap()));
			                                                  ^
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Text.java:27: error: (method.invocation) $$ 3 $$ matches(java.lang.String,java.util.List<data.structures.Template>) $$ @UnderInitialization @NonNull Text $$ @Initialized @NonNull Text $$ ( 753, 774 ) $$ call to matches(java.lang.String,java.util.List<data.structures.Template>) not allowed on the given receiver.
		if (!matches(k, templates)) {
		            ^
  found   : @UnderInitialization @NonNull Text
  required: @Initialized @NonNull Text
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Text.java:34: error: (method.invocation) $$ 3 $$ calcMaxLength() $$ @UnderInitialization(data.structures.Text.class) @NonNull Text $$ @Initialized @NonNull Text $$ ( 939, 954 ) $$ call to calcMaxLength() not allowed on the given receiver.
		this.maxLength = calcMaxLength();
		                              ^
  found   : @UnderInitialization(data.structures.Text.class) @NonNull Text
  required: @Initialized @NonNull Text
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Schema.java:42: error: (method.invocation) $$ 3 $$ transformRest(long) $$ @UnderInitialization(data.structures.Schema.class) @NonNull Schema $$ @Initialized @NonNull Schema $$ ( 1160, 1179 ) $$ call to transformRest(long) not allowed on the given receiver.
		this.rest = transformRest(rest);
		                         ^
  found   : @UnderInitialization(data.structures.Schema.class) @NonNull Schema
  required: @Initialized @NonNull Schema
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Trie.java:35: error: (argument) $$ 4 $$ newValue $$ AtomicReferenceArray.set $$ null (NullType) $$ @Initialized @NonNull Trie $$ ( 836, 840 ) $$ incompatible argument for parameter newValue of AtomicReferenceArray.set.
			this.children.set(i, null);
			                     ^
  found   : null (NullType)
  required: @Initialized @NonNull Trie
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Trie.java:55: error: (argument) $$ 4 $$ expectedValue $$ AtomicReferenceArray.compareAndSet $$ null (NullType) $$ @Initialized @NonNull Trie $$ ( 1292, 1296 ) $$ incompatible argument for parameter expectedValue of AtomicReferenceArray.compareAndSet.
				this.children.compareAndSet(x + 128, null, branch);
				                                     ^
  found   : null (NullType)
  required: @Initialized @NonNull Trie
../original/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Trie.java:124: error: (override.return) $$ 6 $$ T[ extends @UnknownKeyFor Object super @UnknownKeyFor Void] @UnknownKeyFor [] $$ T[ extends @UnknownKeyFor Object super @KeyForBottom Void] @UnknownKeyFor [] $$ Trie $$ <T extends Object> T extends Object [] toArray(Trie this, T extends Object [] p0) $$ Collection<HashBitmapPair> $$ <T extends Object> T extends Object [] toArray(Collection<HashBitmapPair> this, T extends Object [] p0) $$ ( 2874, 2877 ) $$ Incompatible return type.
	public <T> T[] toArray(T[] a) {
	            ^
  found   : T[ extends @UnknownKeyFor Object super @UnknownKeyFor Void] @UnknownKeyFor []
  required: T[ extends @UnknownKeyFor Object super @KeyForBottom Void] @UnknownKeyFor []
  Consequence: method in Trie
    <T extends Object> T extends Object [] toArray(Trie this, T extends Object [] p0)
  cannot override method in Collection<HashBitmapPair>
    <T extends Object> T extends Object [] toArray(Collection<HashBitmapPair> this, T extends Object [] p0)
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors
